APR-2553 - Style fix to prevent inline error messages from wrapping

--- a/src/SFA.DAS.RoatpGateway.Web/wwwroot/stylesheets/application.css
+++ b/src/SFA.DAS.RoatpGateway.Web/wwwroot/stylesheets/application.css
@@ -1283,7 +1283,7 @@ TODO: change to 'das-page-navigation' and BEM
 /* Inline search component */
 
 @media (min-width: 40.0625em) {
-  .app-search-form {
+  .app-search-form__group {
     max-width: 33%;
   }
 }
